Updated about me section.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -352,7 +352,9 @@
 
   <!-- Resources -->
   <h2>About Me</h2>
-  <p>My name is Richard Moore. I’m a programmer, consultant, producer, and artist based out of the Washington, DC / Northern Virginia Area.  I’ve worked at product companies as well as consulting firms servicing the public and private sectors throughout my career. I’ve also founded a start-up, produced mixtapes and recorded albums with and for local artists.</p>
+  <p>Hello! &nbsp; My name is Richard Moore. I’m a full stack software engineer based out of the Washington, DC / Northern Virginia Area. My career started in Blacksburg, VA after graduating from Virginia Tech (Go Hokies!). I began as a .NET developer at a mortage document management company and later transitioned to a company delivering enterprise content management solutions for several years. 
+    These days I work (mostly) remote for a consulting firm servicing public and private sector clients.  I specialize in Angular, Java and Xamarin .NET mobile development.<br><br>
+    When I’m not writing code, I enjoy cooking, listening to podcasts, keeping up with #FinTwit and being a proud #GirlDad. </p>
 
   <!-- <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
@@ -387,8 +389,8 @@
   </div> -->
 
   <!-- Next Steps -->
-  <h2>Contract Experience</h2>
-  <p></p>
+  <!-- <h2>Contract Experience</h2>
+  <p></p> -->
 
   <input type="hidden" #selection>
 
